--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "posthtml-include": "^1.7.4",
     "process": "^0.11.10"
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead"
-}
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+    "@parcel/transformer-html": "^2.6.0"
+  }
+
+
