--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "handlebars": "^4.7.7",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.5",
+    "simplelightbox": "^2.10.3",
     "swiper": "^8.2.2"
   },
   "devDependencies": {
